# ComputePortalTemplate

./: .gitignore  README.md
datasets/: pyproject.toml
datasets/datasets/: __init__.py
datasets/datasets/dataset_files/: example1.json  example2.json
endpoint/: README.md  pyproject.toml
endpoint/compute_functions/: __init__.py  auth.py  setup_script.py
endpoint/compute_functions/functions/: __init__.py  example.py
endpoint/config/perlmutter/: compute-portal-perlmutter-1-node.yaml
endpoint/config/polaris/: compute-portal-polaris-1-node.yaml
endpoint/endpoint/: datasets.py  preview_data.py
endpoint/endpoint/output/: __init__.py  files.py
endpoint/endpoint/scripts/example_task/: cli.py  parameter_model.py  preview.py
endpoint/endpoint/utils/: data_fields.py  error_handler.py  profile_matrix.py
entrypoint/: README.md  pyproject.toml
entrypoint/config/: compute-portal-entry-point.yaml
entrypoint/entrypoint/: __init__.py  client.py  resolve.py
entrypoint/entrypoint/compute_functions/: _compute_function.py  entry_point_function.py
entrypoint/entrypoint/scripts/: auth.py  setup_entrypoint.py  test_resolve.py
flows/: README.md  pyproject.toml
flows/flows/: auth.py  models.py  utils.py
flows/flows/flow_adapters/: __init__.py  hello_world.json
flows/flows/globus_flows/: __init__.py  compute_with_check_flow.py
flows/flows/scripts/: check_entrypoint.py  check_function.py  check_system.py  remove_endpoint.py  setup_flows.py
