[tool.poetry]
name = "datasets"
version = "0.1.0"
description = ""
authors = ["Michael Buehlmann <buehlmann.michi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.10.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
